Revision history for {{$dist->name}}

{{$NEXT}}

  [API CHANGE]

    * method_names now takes an optional list of operators; the options
    hash is now passed as an optional trailing hashref


0.02      2017-01-17 10:12:51-05:00 America/New_York (TRIAL RELEASE)

  [BUG FIX]

    * wrapping an existing method with the same name as the wrapper
      caused an infinite loop

0.01      2017-01-15 17:19:08-05:00 America/New_York (TRIAL RELEASE)

    * initial release