@@ -7,6 +7,11 @@ Revision history for {{$dist->name}}
     * method_names now takes an optional list of operators; the options
     hash is now passed as an optional trailing hashref
 
+  [ENHANCEMENTS]
+
+    * new class method tag_to_ops, returns list of operators
+      corresponding to a tag
+
 
 0.02      2017-01-17 10:12:51-05:00 America/New_York (TRIAL RELEASE)
 
